--- a/Index.html
+++ b/Index.html
@@ -11,12 +11,12 @@
       <div class="card-container">
         <div class="card">
           <div class="card-header"><img src="assets/images/avatar-jessica.jpeg" alt="Card Image" /></div>
-            <h2>Jessica Randall</h2>
+            <h1>Jessica Randall</h2>
           </div>
           <h2 class="address">London, United Kingdom</h2>
           <p class="content">"Front-end developer and avid reader"</p>
           <div class="card-body">
-            <ul>
+            <ul class="card-list">
               <li class="op1">Github</li>
               <li class="op2">Frontend Mentor</li>
               <li class="op3">LinkedIn</li>
