--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
   />
   </head>
   <body>
+    <div id="root"></div>
     <div class="container">
       <div class="card-container">
         <div class="card">
